force-app/main/default/objects/Device__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>