force-app/main/default/objects/Device__c/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <label>Device Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>