force-app/main/default/objects/Device__c/fields/Device_Technique_10__c.field-meta.xml
<CustomField>
    <fullName>Device_Technique_10__c</fullName>
    <label>Device Technique 10</label>
    <length>50</length>
    <type>Text</type>
</CustomField>