force-app/main/default/objects/Device__c/fields/MAC_Adress__c.field-meta.xml
<CustomField>
    <fullName>MAC_Adress__c</fullName>
    <label>MAC Adress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>