force-app/main/default/objects/Device__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>OS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>