force-app/main/default/objects/Device__c/fields/personcontactid__c.field-meta.xml
<CustomField>
    <fullName>personcontactid__c</fullName>
    <formula>CASESAFEID(Person_account__r.PersonContactId)</formula>
    <label>personcontactid</label>
    <type>Text</type>
</CustomField>