force-app/main/default/objects/Device__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>